[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sm-benchmarker"
version = "0.1.0"
description = "SageMaker / LLM endpoint token throughput and latency benchmark"
authors = [{name="Avnish Narayan", email="avnish@anyscale.com"}]
license = {text= "Apache-2.0"}
requires-python = ">=3.8"
dependencies = ["pydantic",
                "ray", 
                "pytest>=6.0", 
                "seaborn>=0.11", 
                "awscli>=1.22", 
                "typer>=0.4", 
                "litellm>=0.1.738", 
                "num2words",
                "transformers",
                "tqdm",
                "boto3",
                "google-cloud-aiplatform",
                "rich>=13.0"]

[project.scripts]
sm-benchmarker = "llmperf.token_benchmark_ray:main"
